--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 	<script type="text/javascript" src="./js/app.js" />
 </head>
 <body>
-	
+	<header id="header">
+		<h1>Convert Celsius To Fahrenheit</h1>
+	</header>
+
+	<main id="main">
+		
+	</main>
+
+	<footer id="footer">
+		
+	</footer>
 </body>
 </html>
