Added primary footer content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	</main>
 
 	<footer id="footer">
-		
+		<span id="copyright">&copy; 2019 Lyndon Panton | All Rights Reserved</span>
+		<span id="more"><a id="more-github" class="more-link" href=""></a> <a id="more-codepen" class="more-link" href=""></a> <a id="more-stackoverflow" class="more-link" href=""></a> <a id="more-linkedin" class="more-link" href=""></a></span>
 	</footer>
 </body>
 </html>
