--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="author" content="Lyndon Panton" />
 	<meta name="description" content="An application which converts a given temperature in celsius to fahrenheit" />
 	<title>Convert Celsius To Fahrenheit</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
 	<link rel="stylesheet" type="text/css" href="./css/styles.css" />
 	<script type="text/javascript" src="./js/app.js" />
 </head>
