--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 	</header>
 
 	<main id="main">
-		
+		<form id="form">
+			<label for="form-number">Temperature in celsius:
+				<input id="form-number" type="number" name="form-number" />
+			</label>
+			<input id="form-submit" type="submit" name="form-submit" value="Convert" />
+		</form>
 	</main>
 
 	<footer id="footer">
