--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			</label>
 			<input id="form-submit" type="submit" name="form-submit" value="Convert" />
 		</form>
+
+		<p id="display">Temperature in fahrenheit: <span id="display-output"></span></p>
 	</main>
 
 	<footer id="footer">
