Replaced form with single input element

--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 	</header>
 
 	<main id="main">
-		<form id="form">
-			<label for="form-number">Temperature in celsius:
-				<input id="form-number" type="number" name="form-number" />
-			</label>
-			<input id="form-submit" type="submit" name="form-submit" value="Convert" />
-		</form>
+		<input id="form-number" type="number" name="form-number" placeholder="Celsius Temperature" />
 
 		<p id="display">Temperature in fahrenheit: <span id="display-output"></span></p>
 	</main>
