--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 	<main id="main">
-		<input id="form-number" type="number" name="form-number" placeholder="Celsius Temperature" />
+		<input id="celsius" type="number" name="celsius" placeholder="Celsius Temperature" />
 
 		<p id="display">Temperature in fahrenheit: <span id="display-output"></span></p>
 	</main>
