Added approximately equal symbol

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main id="main">
 		<input id="celsius" type="number" name="celsius" placeholder="Celsius Temperature" />
 
-		<p id="display">Temperature in fahrenheit: <span id="display-output"></span></p>
+		<span id="symbol">&asymp;</span> <span id="display-output"></span>
 	</main>
 
 	<footer id="footer">
