Added default values

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	</header>
 
 	<main id="main">
-		<input id="celsius" type="number" name="celsius" placeholder="Celsius Temperature" />
+		<input id="celsius" type="number" name="celsius" placeholder="Celsius Temperature" value="0" />
 
-		<span id="symbol">&asymp;</span> <span id="display-output"></span>
+		<span id="symbol">&asymp;</span> <span id="display-output">32</span>
 	</main>
 
 	<footer id="footer">
