--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main id="main">
 		<input id="celsius" type="number" name="celsius" placeholder="Celsius Temperature" value="0" />
 
-		<span id="symbol">&asymp;</span> <span id="display-output">32</span>
+		<span id="about-symbol" class="symbol">&asymp;</span> <span id="display-output">32</span><span id="fahrenheit-symbol" class="symbol">&#176;F</span>
 	</main>
 
 	<footer id="footer">
